# dynamic_deephit

./: PKG-INFO  pyproject.toml  setup.cfg  setup.py
src/dynamic_deephit/: __init__.py
src/dynamic_deephit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dynamic_deephit/core/: __init__.py  external_validation.py  functions.py  individual_prediction.py  interval_CV.py  main.py  model.py
src/dynamic_deephit/utils/: __init__.py  data_loader.py  import_data.py
test/: test.external_validation.py  test.individual_prediction.py  test.interval_CV.py  test.main.py
