[metadata]
name = dynamic_deephit
version = 0.1.0
author = Chengfeng Zhang
author_email = 2714311212@qq.com
maintainer = Zheng Chen
maintainer_email = zheng-chen@hotmail.com
description = Dynamic-DeepHit: A Deep Learning Approach for Dynamic Survival Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/dynamic_deepHit
project_urls = 
	Paper-TBME-2020 = https://ieeexplore.ieee.org/document/8681104
classifiers = 
	Programming Language :: Python :: 3.6
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License

[options]
package_dir = 
	= src
packages = find:
package_data = 
	dynamic_deephit = data/*.csv
python_requires = >=3.6,<3.7
install_requires = 
	numpy==1.16.5
	pandas==1.0.1
	tensorflow==1.13.1
	scikit-learn==0.22.1
	lifelines==0.24.9
	termcolor==1.1.0

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

